# ai-email-triage-agent-openenv

./: .gitignore  Dockerfile  README.md  __init__.py  analytics_store.py  client.py  gmail_client.py  inference.py  models.py  pyproject.toml  reasoning_engine.py  requirements.txt  test_runner.py  validation.txt
agents/: __init__.py  classifier.py  pipeline.py  responder.py  router.py
openenv_my_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
prompts/: __init__.py  classifier_prompt.py  responder_prompt.py  router_prompt.py
server/: Dockerfile  app.py  dashboard.css  dashboard.html  dashboard.py  my_env_environment.py
